# vakthund

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  copied_files.txt  dummy.vscenario  settings.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
config/: production.config  production.yaml  runtime_config.yaml  sim_config.yaml  simulator.yaml  vakthund.yaml
crates/vakthund-capture/: Cargo.toml
crates/vakthund-capture/src/: lib.rs  live_capture.rs  pcap_capture.rs  simulate.rs  simulation_capture.rs
crates/vakthund-common/: Cargo.toml
crates/vakthund-common/src/: config.rs  errors.rs  lib.rs  logger.rs  packet.rs  sim_logging.rs
crates/vakthund-core/: Cargo.toml
crates/vakthund-core/src/: event_bus.rs  event_processor.rs  lib.rs  pipeline.rs  reporting.rs  simulation_engine.rs
crates/vakthund-detection/: Cargo.toml
crates/vakthund-detection/src/: analyzer.rs  lib.rs
crates/vakthund-monitor/: Cargo.toml
crates/vakthund-monitor/src/: lib.rs  monitor.rs
crates/vakthund-protocol/: Cargo.toml
crates/vakthund-protocol/src/: coap.rs  generic.rs  lib.rs  mqtt.rs  parser.rs
crates/vakthund-simulation/: Cargo.toml
crates/vakthund-simulation/src/: lib.rs  simulation_engine.rs  storage.rs
src/: cli.rs  config.rs  main.rs  message_bus.rs  packet_capture.rs  packet_parser.rs
src/config/: mod.rs
src/pipeline/: capture.rs  detect.rs  mod.rs  monitor.rs  prevent.rs
src/protocols/: coap.rs  mod.rs  mqtt.rs
src/reporting/: alerts.rs  mod.rs  snapshots.rs
src/simulation/: checksum.rs  engine.rs  mod.rs  replay.rs
vakthund-api/: Cargo.toml
vakthund-api/src/: lib.rs
vakthund-capture/: Cargo.toml
vakthund-capture/src/: capture.rs  lib.rs  live_capture.rs  packet.rs
vakthund-cli/: Cargo.toml
vakthund-cli/src/: commands.rs  error.rs  main.rs
vakthund-config/: Cargo.toml
vakthund-config/src/: capture.rs  core.rs  error.rs  lib.rs  monitor.rs  prevention.rs  provider.rs  simulator.rs  telemetry.rs  validation.rs
vakthund-core/: Cargo.toml
vakthund-core/benches/: event_bus_bench.rs
vakthund-core/src/: error.rs  event_bus.rs  lib.rs  sim.rs  time.rs
vakthund-core/src/alloc/: mod.rs  pool.rs  stats.rs
vakthund-core/src/alloc/arena/: mod.rs
vakthund-core/src/alloc/pool/: mod.rs
vakthund-core/src/config/: mod.rs  runtime.rs  telemetry.rs
vakthund-core/src/events/: bus.rs  mod.rs  network.rs
vakthund-core/src/network/: jitter.rs  latency.rs  mod.rs
vakthund-core/src/network/packet_loss/: mod.rs
vakthund-core/src/sim/: mod.rs
vakthund-core/src/time/: mod.rs
vakthund-detection/: Cargo.toml
vakthund-detection/src/: lib.rs  signatures.rs
vakthund-engine/: Cargo.toml
vakthund-engine/src/: config.rs  lib.rs  runtime.rs
vakthund-engine/src/engine/: default_driver.rs  diagnostics.rs  error.rs  event_processing.rs  mod.rs  runtime.rs  runtime_trait.rs
vakthund-prevention/: Cargo.toml
vakthund-prevention/src/: firewall.rs  lib.rs
vakthund-protocols/: Cargo.toml
vakthund-protocols/benches/: protocol_parsing_bench.rs
vakthund-protocols/src/: coap.rs  lib.rs  modbus.rs  mqtt.rs
vakthund-simulator/: Cargo.toml
vakthund-simulator/benches/: simulation_bench.rs
vakthund-simulator/src/: chaos.rs  cli.rs  config.rs  driver.rs  lib.rs  randomized_event_driver.rs  replay.rs  scenario.rs  virtual_clock.rs
vakthund-simulator/src/network_simulation/: jitter.rs  latency.rs  packet_loss.rs
vakthund-telemetry/: Cargo.toml
vakthund-telemetry/src/: lib.rs  logging.rs  metrics.rs
vakthund-telemetry/src/logging/: mod.rs
vakthund-telemetry/src/metrics/: mod.rs
