[package]
name = "vakthund"
version = "0.1.0"
edition = "2021"
description = "Vakthund IDPS – a deterministic, high‑performance intrusion detection and prevention system"
license = "MIT"

[dependencies]
once_cell = "1.20.2"
crossbeam = "0.8"
bytes = "1.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
humantime-serde = "1.1"
nom = "8.0"
rand = "0.9"
rand_xoshiro = "0.7"
sha2 = "0.10"
pcap = "2.2"
memmap = "0.7"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
hex = "0.4"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.clippy]
all-targets = true
deny-warnings = true
forbid-unsafe-code = true
