[package]
name = "vakthund-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

vakthund-engine = { path = "../vakthund-engine" }
vakthund-telemetry = { path = "../vakthund-telemetry" }
vakthund-config = { path = "../vakthund-config" }
