[package]
name = "vakthund-config"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
validator = { workspace = true }
ipnetwork = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
regex = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }

[features]
simulation = ["figment/json"]
production = []
