[package]
name = "vakthund-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
crossbeam = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }  # Added macros and rt-multi-thread
proptest = { workspace = true }
bumpalo = "3.17.0"
rand = { version = "0.9.0", features = ["small_rng", "std"] }
concurrent-queue = "2.5.0"
serde = { version = "1.0", features = ["derive"] } # Added serde for config
serde_yaml = "0.9.34"
tracing = "0.1.41"
opentelemetry = "0.28.0"

vakthund-telemetry = { path = "../vakthund-telemetry" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-prevention = { path = "../vakthund-prevention" }
vakthund-protocols = { path = "../vakthund-protocols" }
vakthund-capture = { path = "../vakthund-capture" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "event_bus_bench"
harness = false
