[package]
name = "vakthund-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_bytes = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bumpalo = { workspace = true }
concurrent-queue = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
once_cell = { workspace = true }

vakthund-telemetry = { path = "../vakthund-telemetry" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-prevention = { path = "../vakthund-prevention" }
vakthund-protocols = { path = "../vakthund-protocols" }
vakthund-capture = { path = "../vakthund-capture" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "event_bus_bench"
harness = false
