[package]
name = "vakthund-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
figment = { workspace = true }
anyhow = { workspace = true }

vakthund-core = { path = "../vakthund-core" }
vakthund-simulator = { path = "../vakthund-simulator" }
vakthund-telemetry = { path = "../vakthund-telemetry" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-prevention = { path = "../vakthund-prevention" }
vakthund-protocols = { path = "../vakthund-protocols" }
vakthund-capture = { path = "../vakthund-capture" }
vakthund-config = { path = "../vakthund-config" }
