[package]
name = "vakthund-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
criterion = "0.5.1"
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = { workspace = true }

vakthund-core = { path = "../vakthund-core" }
vakthund-telemetry = { path = "../vakthund-telemetry" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-protocols = { path = "../vakthund-protocols" }
vakthund-config = { path = "../vakthund-config" }

[[bench]]
name = "simulation_bench"
harness = false
