[package]
name = "vakthund-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
tracing-test = { workspace = true }
tokio = { workspace = true }

[features]
engine = []
