[package]
name = "vakthund-capture"
version = "0.1.0"
edition = "2021"
description = "Packet capture module for Vakthund"
license = "MIT"

[dependencies]
vakthund-common = { path = "../vakthund-common" }
pcap = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
ctrlc = "3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
