[package]
name = "vakthund-common"
version = "0.1.0"
edition = "2021"

# Proprietary and confidential. All rights reserved.

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
bytes = "1.9.0"
