[package]
name = "vakthund-core"
version = "0.1.0"
edition = "2021"

# Proprietary and confidential. All rights reserved.

[dependencies]
vakthund-common = { path = "../vakthund-common" }
vakthund-capture = { path = "../vakthund-capture" }
vakthund-protocol = { path = "../vakthund-protocol" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-monitor = { path = "../vakthund-monitor" }
vakthund-simulation = { path = "../vakthund-simulation" }
serde_json = "1.0"
chrono = "0.4"
