[package]
name = "vakthund-core"
version = "0.1.0"
edition = "2021"

# Proprietary and confidential. All rights reserved.

[dependencies]
vakthund-common = { path = "../vakthund-common" }
vakthund-capture = { path = "../vakthund-capture" }
vakthund-protocol = { path = "../vakthund-protocol" }
vakthund-detection = { path = "../vakthund-detection" }
vakthund-monitor = { path = "../vakthund-monitor" }
vakthund-simulation = { path = "../vakthund-simulation" }

serde = "1.0.217"
serde_json = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5.14"
lettre = "0.11.12"
dotenv = "0.15.0"
syslog = "7.0.0"
