[package]
name = "vakthund-simulation"
version = "0.1.0"
edition = "2021"

# Proprietary and confidential. All rights reserved.

[dependencies]
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
vakthund-common = { path = "../vakthund-common" }
